# acm32f4-rs

./: Cargo.toml  Embed.toml  memory.x
.cargo/: config.toml
src/: accelertate.rs  main.rs
