[package]
authors = ["zhaosx <shaoxi2010@qq.com>"]
edition = "2018"
readme = "README.md"
name = "acm32f4-rs"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"

[dependencies.acm32f40x]
git = "https://github.com/shaoxi2010/acm32f4.git"

[dependencies.rtt-target]
version = "0.3.1"
features = ["cortex-m"]


# Uncomment for the allocator example.
# alloc-cortex-m = "0.4.0"

# Uncomment for the device example.
# Update `memory.x`, set target to `thumbv7em-none-eabihf` in `.cargo/config`,
# and then use `cargo build --examples device` to build it.
# [dependencies.stm32f1]
# features = ["stm32f103", "rt"]
# version = "0.7.1"

# this lets you use `cargo fix`!
[[bin]]
name = "acm32f4-rs"
test = false
bench = false

[profile.release]
codegen-units = 1 # better optimizations
debug = true # symbols are nice and they don't increase the size on Flash
lto = true # better optimizations
